syntax = "proto3";

option go_package = "./grpc-server";



service Health {
    rpc Ping (PingRequest) returns (PongResponse);
}

message PingRequest {
    string message = 1;
}

message PongResponse {
    string message = 1;
}

service Login {
    rpc Login (LogingRequest) returns (LoginResponse);
    rpc Logout (Empty) returns (LoginResponse);
    rpc CheckSession (LogingRequest) returns (LoginResponse);

}
message LogingRequest {
    string username = 1;
    string passwd = 2;
}

message LoginResponse {
    bool is_login = 1;
}

message Empty {}
